Add search path, modify work with db
